@@ -117,7 +117,6 @@ THE POSSIBILITY OF SUCH DAMAGE.
                     </annotationProcessorPaths>
                     <!-- release>${javac.target}</release -->
                     <compilerArgs>
-                        <arg>--enable-preview</arg>
                         <arg>--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED</arg>
                         <arg>-h</arg>
                         <arg>${project.build.directory}/header</arg>
